Finished 'Difference Image Histogram method' subsubsection: - completed subsection with examples; - format fixes; - corrected typos; - update 'guidelines.md'; - added image in 'assets'; - added source in 'references.bib'

--- a/report/references.bib
+++ b/report/references.bib
@@ -9,3 +9,10 @@
     title = "Steganography definition",
     url = "https://www.merriam-webster.com/dictionary/steganography"
 }
+
+@article{new-detection-lsb-steganography,
+    author = {T. Zhang, X. Ping},
+    title = {A new approach to reliable detection of LSB steganography in natural images},
+    year = {2003},
+    DOI = {https://doi.org/10.1016/S0165-1684(03)00169-5}
+}
