Started 'Closest Color Pair method' in 03_Steganalysis.tex

--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -131,7 +131,8 @@
     \end{itemize}
     
     \subsubsection{Closest Color Pair method}
-
+    Another method used to detect hidden messages on the LSB plane is the
+    \emph{Closest Color Pair method}.
 
     \subsubsection{DCT Domain embedding method}
     The DCT Domain embedding method works on \emph{JPEG} images, one of the most
