Typos in 03_Steganalysis.tex

--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -10,7 +10,7 @@
     in steganalysis the study of the message starts from a suspect.
     \subsection{Methods}
     Hereinafter we will present the two type of methods used in steganalysis in
-    order to obtain the secret message 
+    order to obtain the secret message.
 
     \subsubsection{Statistical}
 
@@ -116,8 +116,8 @@
 
     then, we define the following values:
 
-    \[ \alpha_i = \frac{a_{2i+2,2i+1}}{a_2i,2i+1} \]
-    \[ \beta_i = \frac{a_{2i+2,2i+3}}{a_2i,2i-1} \]
+    \[ \alpha_i = \frac{a_{2i+2,2i+1}}{a_{2i,2i+1}} \]
+    \[ \beta_i = \frac{a_{2i+2,2i+3}}{a_{2i,2i-1}} \]
     \[ \gamma_i = \frac{g_{2i}}{g_{2i+2}} \]
 
     As found out by X. Ping and T. Zhang in
