Finished 'Closest Color Pair method': - wrote method explanation; - added citations

--- a/report/references.bib
+++ b/report/references.bib
@@ -16,3 +16,12 @@
     year = {2003},
     DOI = {https://doi.org/10.1016/S0165-1684(03)00169-5}
 }
+
+@article{detecting-lsb-steganography,
+    author  = {J. Fridrich, M. Goljan, R. Du},
+    journal = {IEEE Multimedia},
+    number  = {4},
+    title   = {Detecting LSB Steganography in Color and Gray Scale Image},
+    volume  = {8},
+    year    = {2001}
+}
