--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -159,7 +159,7 @@
 
     We know that if
 
-    \[ \frac{R}{R'} \geq Th, Th = 1.1 \]
+    \[ \frac{R}{R'} \geq Th,\ Th = 1.1 \]
 
     \noindent then the image is a natural image, otherwise it contains an hidden
     message. All the proofs are in \cite{detecting-lsb-steganography}.
