added map.png to intro

--- a/report/references.bib
+++ b/report/references.bib
@@ -4,6 +4,12 @@
     year = "2009"
 }
 
+@article{modern-text-hiding,
+  author          = "{Milad Taleby Ahvanooey, Qianmu Li, Jun Hou, Ahmed Raza Rajput, Chen Yini}",
+  title           = "Modern Text Hiding, Text Steganalysis, and Applications: A Comparative Analysis",
+  year            = "2019"
+}
+
 @online{steganography-definition,
     author = "Merriam Webster",
     title = "Steganography definition",
