--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -134,7 +134,7 @@
     Another method used to detect hidden messages on the LSB plane is the
     \emph{Closest Color Pair method}.
 
-    When an image has a steganographed message in the LSB plane, the number of
+    Whhen an image has a steganographed message in te LSB plane, the number of
     close colors increases \cite{detecting-lsb-steganography}. Given two pair of
     colors $C_1=[R_1,G_1,B_1],\ C_2=[R_2,G_2,B_2]$, the condition of them being
     close is:
@@ -257,7 +257,7 @@
 
     \begin{figure}[h]
         \centering
-        \caption{Structure of TCP packet}
+        \caption{Structure of UDP packet}
         \includegraphics[scale=0.3]{udp_header.png}
     \end{figure}
 
