added part on statistical steganalysis on text

--- a/report/references.bib
+++ b/report/references.bib
@@ -10,6 +10,13 @@
   year            = "2019"
 }
 
+@article{fast-steg-method,
+  author          = "{Zhongliang Yang , Yongfeng Huang , and Yu-Jin Zhang}",
+  title           = "A Fast and Efficient Text Steganalysis Method",
+  year            = "2019"
+
+}
+
 @online{steganography-definition,
     author = "Merriam Webster",
     title = "Steganography definition",
