Audio phase coding, references

--- a/report/references.bib
+++ b/report/references.bib
@@ -38,3 +38,22 @@
     volume  = {8},
     year    = {2001}
 }
+
+@article{stego-key,
+  author          = {J. Fridrich, M. Goljan, D. Soukal},
+  title           = {Searching for the Stego-Key},
+  year            = {2004}
+}
+
+@article{techniques-data-hiding,
+  author          = {W. Bender, D. Gruhl, N. Morimoto A. Lu},
+  title           = {Techniques for data hiding},
+  year            = {1996}
+}
+
+@article{steganalysis-phase-coding,
+  author          = {W. Zeng, H. Ai, R. Hu},
+  journal         = {IEEE},
+  title           = {A Novel Steganalysis Algorithm of Phase Coding in Audio Signal},
+  year            = {2007}
+}
