--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -233,10 +233,24 @@
 
     \paragraph{Steganalysis techniques} for phase coding system follows a
     procedure similar to the encoding ones, since is based on a statistical
-    analysis of \emph{phase discontinuites}.
+    analysis of \emph{phase discontinuites}, but which requires the use of a
+    classification algorithm in order to distinguish between natural and
+    modified signals.
     
-
-    \cite{steganalysis-phase-coding}
+    As proposed in \cite{steganalysis-phase-coding}, the steganalysis can be
+    perfomed as follows:
+    \begin{enumerate}
+        \item The signal is divided into segments to which is applied a
+            \emph{fast Fourier transform} (FFT) in order to extract the phase
+            difference between adjacent segments.
+        \item The phase difference is monitored calculating statistical features
+            of the sample.
+        \item \emph{SVM classifier} (support-vector machines) is used to
+            detect if the signal has been modified or not.
+    \end{enumerate}
+    An SVM classifier, after a proper training, is able to clearly distinguish
+    between elements by mapping them into two different classes by means of
+    linear regression and statistical calculus.
 
 
     \subsubsection{Echo embedding methods}
