Layout and references

--- a/report/references.bib
+++ b/report/references.bib
@@ -57,3 +57,15 @@
   title           = {A Novel Steganalysis Algorithm of Phase Coding in Audio Signal},
   year            = {2007}
 }
+
+@article{jpeg-image-internet,
+  author          = {N. Provos, P. Honeyman},
+  title           = {Detecting Steganographic Content on the Internet},
+  year            = {2001}
+}
+
+@article{review-audio-steganalysis,
+  author          = {H. Ghasemzadeh, M. H. Kayvanrad},
+  title           = {Comprehensive Review of Audio Steganalysis Methods},
+  year            = {2017}
+}
