--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -70,7 +70,8 @@
     and the \emph{least significant bit} (LSB) is substituted with the message
     to be hidden.
     Note that even if the message is encrypyted, due to its simplicity, this
-    method is easily detectable with a statistical steganalysis attack.
+    method is easily detectable with a statistical steganalysis attack
+    \cite{techniques-data-hiding}.
     
 
     \subsubsection{Difference Image Histogram method}
@@ -251,12 +252,32 @@
         \item \emph{SVM classifier} (support-vector machines) is used to
             detect if the signal has been modified or not.
     \end{enumerate}
-    An SVM classifier, after a proper training, is able to clearly distinguish
+    A SVM classifier, after a proper training, is able to clearly distinguish
     between elements by mapping them into two different classes by means of
     linear regression and statistical calculus.
 
 
     \subsubsection{Echo embedding methods}
+    The echo embedding methhods hide data introduzing or varying an \emph{eco}.
+    \begin{figure}[h]
+        \centering
+        \caption{Echo kernels and parameters}
+        \includegraphics[scale=0.6]{audio_echo.png}
+    \end{figure}
+    Data are hidden by varying \emph{initial amplitude}, \emph{decay rate} and
+    \emph{offset}.
+    \paragraph{Encoding} is performed by dividing the signal into smaller
+    portions and the echoing each portion as an independent signals.
+    The coder use two different delay times to represent a binary zero(offset)
+    and a binary one(offset+delta), both below audible threshold, considering
+    the initial amplitude and that the decay rate follows and exponential
+    behaviour.
+    The final signal is formed by recombining all independent encoded signal
+    portions.
+    The transitions between one and zero are done by slightly modify the zero
+    and one kernel in order to maximize imperceptibility.
+    
+
 
 
     \subsubsection{Mp3 steganalysis}
