--- a/report/sections/03_Steganalysis/03_Steganalysis.tex
+++ b/report/sections/03_Steganalysis/03_Steganalysis.tex
@@ -305,7 +305,8 @@
 
     \subsubsection{Mp3 steganalysis}
     The last type of audio steganalysis that we will briefly treat regards the
-    \emph{Mp3} format, which is one of the most used compressed sound formats.
+    \emph{Mp3} format, which is one of the most used compressed sound formats,
+    since it provides a high compression rate and a good quality.
     
     The Mp3 compression algorithm consist of two nested loops.
     The \emph{inner loop} does the quantization of the data and determines the
@@ -316,9 +317,17 @@
     The most common steganographic algorithms apply some modifications on the
     encoding algorithm, for instance, modify the termination condition on the
     inner loop and hide the data during the compression process or modify the
-    compression coefficients.
+    compression coefficients or parameters saved (for instance by replacing the
+    LSB).
 
-    To perform a steganalysis process on an Mp3 file
+    To perform a steganalystic process on an Mp3 file is necessary to do a
+    statistical analysis on the lenght of the quantization steps or on the
+    \emph{MDCT} (modified discrete cosine transform) coefficients, the transform
+    used in the compression algorithm.
+    The analysis methods are similar to ones presented in the other sections in
+    this paper, since they rely on some previous knowledge of what is expected
+    and on calculations that will tell if there is or not a message encrypted.
+
 
     
 
